bug: Fix winners table alignment

--- a/src/components/game/WinnersPart.module.css
+++ b/src/components/game/WinnersPart.module.css
@@ -61,7 +61,7 @@ h6 {
   }
 
   &:last-child {
-    min-width: 150px;
+    min-width: 135px;
   }
 }
 
